# quant-lab

./: .gitignore  CLAUDE.md  EDGE_CASE_REPORT.md  EDGE_CASE_SOLUTIONS.md  FACTOR_CACHING_FILES.md  FACTOR_CACHING_IMPLEMENTATION.md  FACTOR_CACHING_SUCCESS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  README.md  analyze_new_results.py  analyze_results.py  analyze_results_unified.py  backtester.py  backtester_cached.py  batch_backtest.py  batch_backtest_vectorized.py  benchmark_comparison.py  cached_indicators.py  cli.py  data_manager.py  demo_consolidated_factor_system.py  demo_factor_caching.py  demo_factor_info.py  example_factor_caching_usage.py  example_strategy.py  example_strategy_clean.py  factor_store.py  factor_store_enhanced.py  fetch_data.py  fetch_data_improved.py  fetch_data_incremental.py  pyproject.toml  requirements.txt  run_validation.sh  strategy_framework.py  strategy_framework_cached.py  test_edge_cases.py  (+3 more)
data/: .gitkeep  metadata.json
results/: analysis_report.md  best_parameters.json  cli_test.json  ma_crossover_optimized.json  metrics.json  metrics_vectorized.json  new_strategies_metrics.json  rsi_strategy_results.csv
scripts/: fetch_data.sh
seeds/: base_strategy.py  bollinger_obv_breakout.py  ema_atr_mean_reversion.py  macd_rsi_trend_follower.py
src/backtesting/: factor_store_enhanced.py  factor_utils.py  strategy_with_factor_info.py
src/strategies/: ma_cross_with_cache.py
